// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreupgradeReports should render error 1`] = `
<MessageBox
  icontype="error-circle-o"
  key="preupgrade-reports-error"
  msg="Could not retrieve data: Internal server error - Well, this is embarassing"
/>
`;

exports[`PreupgradeReports should render failed to fix all 1`] = `
<Fragment>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <div
      className="title-filter col-md-4"
    >
       
    </div>
    <div
      className="col-md-8"
      id="title_action"
    >
      <div
        className="btn-toolbar pull-right"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={true}
          onClick={[Function]}
        >
          <Component />
        </Button>
      </div>
    </div>
  </Row>
  <FixAlert
    message="Failed to fix things"
  />
  <PreupgradeReportsList
    allEntries={
      Array [
        Object {
          "id": 42,
          "severity": "Too severe to talk about",
          "title": "Fix me!",
        },
        Object {
          "id": 43,
          "severity": "medium",
          "title": "I am broken too",
        },
        Object {
          "id": 44,
          "severity": "high",
          "title": "Octocat is not happy",
        },
        Object {
          "id": 45,
          "severity": "low",
          "title": "Not enough credits",
        },
      ]
    }
    fixAllWorking={false}
  />
</Fragment>
`;

exports[`PreupgradeReports should render when fixing all 1`] = `
<Fragment>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <div
      className="title-filter col-md-4"
    >
       
    </div>
    <div
      className="col-md-8"
      id="title_action"
    >
      <div
        className="btn-toolbar pull-right"
      >
        <div
          id="toolbar-spinner"
        >
          <Spinner
            className=""
            inline={false}
            inverse={false}
            loading={true}
            size="sm"
          />
        </div>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={true}
          onClick={[Function]}
        >
          <Component />
        </Button>
      </div>
    </div>
  </Row>
  <PreupgradeReportsList
    allEntries={
      Array [
        Object {
          "id": 42,
          "severity": "Too severe to talk about",
          "title": "Fix me!",
        },
        Object {
          "id": 43,
          "severity": "medium",
          "title": "I am broken too",
        },
        Object {
          "id": 44,
          "severity": "high",
          "title": "Octocat is not happy",
        },
        Object {
          "id": 45,
          "severity": "low",
          "title": "Not enough credits",
        },
      ]
    }
    fixAllWorking={true}
  />
</Fragment>
`;

exports[`PreupgradeReports should render when loaded 1`] = `
<Fragment>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <div
      className="title-filter col-md-4"
    >
       
    </div>
    <div
      className="col-md-8"
      id="title_action"
    >
      <div
        className="btn-toolbar pull-right"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={true}
          onClick={[Function]}
        >
          <Component />
        </Button>
      </div>
    </div>
  </Row>
  <PreupgradeReportsList
    allEntries={
      Array [
        Object {
          "id": 42,
          "severity": "Too severe to talk about",
          "title": "Fix me!",
        },
        Object {
          "id": 43,
          "severity": "medium",
          "title": "I am broken too",
        },
        Object {
          "id": 44,
          "severity": "high",
          "title": "Octocat is not happy",
        },
        Object {
          "id": 45,
          "severity": "low",
          "title": "Not enough credits",
        },
      ]
    }
    fixAllWorking={false}
  />
</Fragment>
`;

exports[`PreupgradeReports should render when loading 1`] = `
<Fragment>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <div
      className="title-filter col-md-4"
    >
       
    </div>
    <div
      className="col-md-8"
      id="title_action"
    >
      <div
        className="btn-toolbar pull-right"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={true}
          onClick={[Function]}
        >
          <Component />
        </Button>
      </div>
    </div>
  </Row>
  <PreupgradeReportsList
    allEntries={Array []}
    fixAllWorking={false}
  />
</Fragment>
`;
